e2e/repos/appA/guestbook-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  rules:
  - host: guestbook.10.0.2.15.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend-http
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
